# BookReader

./: .gitignore  README.md
book_reader/: pyproject.toml
book_reader/domain/entities/dto/: __init__.py  book.py  user.py
book_reader/domain/entities/models/: __init__.py  base.py  book.py  user.py
book_reader/domain/mappers/: __init__.py  base.py  book_mapper.py  user_mapper.py
book_reader/domain/repositories/: uow.py
book_reader/domain/repositories/implementations/: __init__.py  base.py  book_repository.py  user_repository.py
book_reader/domain/repositories/interfaces/: __init__.py  book_repository.py  user_repository.py
book_reader/services/exc/: __init__.py  base.py  book_exc.py  user_exc.py
book_reader/services/implementations/: __init__.py  base.py  book_service.py  user_service.py
book_reader/services/interfaces/: __init__.py  book_service.py  user_service.py
