[project]
name = "BookReader"
version = "0.0.1"

[tool.black]
line-length = 119

[tool.flake8]
max-line-length = 119
exclude = "venv"

[tool.isort]
line_length = 119

[tool.mypy]
ignore_missing_imports = true
mypy_path = "."
warn_return_any = true
plugins = "sqlalchemy.ext.mypy.plugin"
disallow_untyped_defs = true
